--- a/project_7/css/style.css
+++ b/project_7/css/style.css
@@ -21,7 +21,8 @@ body {
 .header-container {
     font-size: 0;
     max-width: 100%;
-    background-color: #191919;
+    background-color: rgba(25, 25, 25, 0.4);
+    
 }
 
 
@@ -73,7 +74,7 @@ body {
 .main {
     max-width: 950px;
 
-    background-color: #191919;
+    background-color: rgba(25, 25, 25, 0.4);
     margin: 0 auto;
     
 
