--- a/ZoroYo/scss/style.scss
+++ b/ZoroYo/scss/style.scss
@@ -133,7 +133,7 @@
 .page-home {
     position: relative;
     min-height: 100vh;
-    @media(max-width: toRem(730)){
+    @media (max-width: toRem(730)) {
         min-height: 100%;
         padding-bottom: toRem(200);
     }
@@ -144,7 +144,7 @@
         width: 100%;
         height: 100vh;
         z-index: -3;
-        
+
         img {
             width: 100%;
             height: 100%;
@@ -160,7 +160,6 @@
         @media (max-width: toRem(1125)) {
             justify-content: center;
         }
-        
     }
     // .page-home__text
 
@@ -266,6 +265,7 @@
 
 .page-new-anime {
     background-color: #ffffff;
+    margin-bottom: toRem(80);
     // .page-new-anime__container
     position: relative;
     z-index: 1;
@@ -278,12 +278,6 @@
     // .page-new-anime__title
 
     &__title {
-        font-family: Poppins;
-        font-weight: 600;
-        font-size: clamp(1.25rem, 1.159rem + 0.45vw, 1.5rem);
-        line-height: 1.17;
-        letter-spacing: 0.02em;
-        color: #313131;
         margin-bottom: toRem(28);
     }
 
@@ -345,10 +339,9 @@
     &__paragraph {
         margin-bottom: toRem(33);
         &--padding {
-            @media(min-width: toRem(991)){
-             padding-left: toRem(71);   
+            @media (min-width: toRem(991)) {
+                padding-left: toRem(71);
             }
-            
         }
     }
 
@@ -363,7 +356,7 @@
 
         p {
             font-weight: 500;
-            
+
             color: #6e6e6e;
         }
         a {
@@ -382,6 +375,154 @@
 
     // .page-new-anime__read
 }
+@media (max-width: 991px) {
+    .page-new-anime__content > :nth-child(odd):not(:nth-child(1)) {
+        order: 2;
+    }
+}
+
+.page-trend {
+    // .page-trend__container
+
+    &__container {
+        max-width: toRem(1300);
+        margin: 0 auto;
+    }
+
+    // .page-trend__title
+
+    &__title {
+        margin-bottom: toRem(28);
+    }
+}
+
+.page-trend {
+    // .page-trend__container
+
+    &__container {
+        max-width: toRem(1300);
+        overflow: hidden;
+        border: 1px solid black;
+        
+    }
+
+    // .page-trend__title
+
+    &__title {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    // .page-trend__items
+
+    &__items {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        min-width: 0;
+        gap: 30px;
+    }
+
+    // .page-trend__item
+
+    &__item {
+        
+        max-width: toRem(329);
+        width: 100%;
+    }
+
+    // .page-trend__image
+
+    &__image {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            aspect-ratio: 329/254;
+            object-fit: cover;
+            transition: transform .5s;
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+        margin-bottom: toRem(18);
+    }
+
+    // .page-trend__text
+
+
+    // .page-trend__genre
+
+    &__genre {
+        font-family: Poppins;
+        font-weight: 500;
+        font-size: clamp(0.563rem, 0.407rem + 0.55vw, 0.75rem);
+        color: #6e6e6e;
+        span {
+            color: #4b4b4b;
+            margin-right: toRem(13);
+        }
+        margin-bottom: toRem(3);
+    }
+
+    // .page-trend__title-item
+
+    &__title-item {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: clamp(0.875rem, 0.667rem + 0.74vw, 1.125rem);
+        color: #313131;
+        margin-bottom: toRem(9);
+    }
+
+    // .page-trend__paragraph
+
+    &__paragraph {
+        font-size: clamp(0.625rem, 0.417rem + 0.74vw, 0.875rem) !important;
+        margin-bottom: toRem(16);
+    }
+
+    // .page-trend__text-footer
+
+    &__text-footer {
+        display: flex;
+        justify-content: space-between;
+        column-gap: toRem(10);
+        font-family: Poppins;
+        font-size: clamp(0.563rem, 0.407rem + 0.55vw, 0.75rem);
+        p {
+            
+            font-weight: 500;
+            color: #6e6e6e;
+        }
+        a {
+            font-weight: 700;
+            color: #313131;
+        }
+        img{
+            position: relative;
+            bottom: 10px;
+        }
+    }
+
+    &__arrow-slider {
+        display: flex;
+        column-gap: toRem(20);
+        &__next {
+        }
+
+        // .page-trend__prev
+
+        &__prev {
+            img {
+                transform: rotate(90deg);
+            }
+        }
+    }
+}
+
 .paragraph {
     font-family: Poppins;
     font-weight: 400;
@@ -390,12 +531,12 @@
     color: #6e6e6e;
 }
 
-@media (max-width: 991px) {
-  .page-new-anime__content > :nth-child(odd):not(:nth-child(1)) {
-        order: 2; /* Міняємо місцями нечетні елементи з четними */
-    }
-
-   
+.title {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: clamp(1.25rem, 1.159rem + 0.45vw, 1.5rem);
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #313131;
 }
-    
 
