--- a/TovarkaBiz/scss/fonts.scss
+++ b/TovarkaBiz/scss/fonts.scss
@@ -1,20 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-@font-face {
-    font-family: 'Sporting Grotesque';
-    src:
-        url('..       /fonts/SportingGrotesque-Regular.woff2') format('woff2'),
-        url('../fonts/SportingGrotesque-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-  }
 
-  @font-face {
-    font-family: 'Sporting Grotesque';
-    src:
-        url('../fonts/SportingGrotesque-Bold.woff2') format('woff2'),
-        url('../fonts/SportingGrotesque-Bold.woff2') format('woff');
-    font-weight: 700;
-    font-style: normal;
-  }
 
+@import url('https://fonts.googleapis.com/css2?family=Nosifer&family=Poppins:wght@400;500;600;700&family=Varela&display=swap');
