--- a/TovarkaBiz/scss/style.css
+++ b/TovarkaBiz/scss/style.css
@@ -1,16 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@font-face {
-  font-family: "Sporting Grotesque";
-  src: url("..       /fonts/SportingGrotesque-Regular.woff2") format("woff2"), url("../fonts/SportingGrotesque-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Sporting Grotesque";
-  src: url("../fonts/SportingGrotesque-Bold.woff2") format("woff2"), url("../fonts/SportingGrotesque-Bold.woff2") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
+@import url("https://fonts.googleapis.com/css2?family=Nosifer&family=Poppins:wght@400;500;600;700&family=Varela&display=swap");
 *,
 *::before,
 *::after {
@@ -79,31 +67,19 @@ textarea {
   appearance: none;
 }
 
-body {
-  background-color: rgb(37, 6, 66);
-  color: #fff;
-  font-family: "Sporting Grotesque";
-  overflow-x: hidden;
-}
-
 .wrapper {
-  min-height: 100vh;
+  min-height: 100%;
   overflow: clip;
-  width: 100vw;
 }
 
 [class*=__container] {
-  max-width: 76.875rem;
   padding: 0 0.9375rem;
   margin: 0 auto;
 }
 
-.header {
-  position: relative;
-  width: 84.1%;
-  margin: 0 auto;
-}
 .header__container {
+  padding: 0.9375rem;
+  max-width: 85rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -113,128 +89,615 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-column-gap: 0.3125rem;
-     -moz-column-gap: 0.3125rem;
-          column-gap: 0.3125rem;
-  padding-top: 1.25rem;
 }
 .header__logo {
-  position: relative;
-  z-index: 100;
-  font-weight: 700;
-  font-size: clamp(0.688rem, 0.532rem + 0.55vw, 0.875rem);
-  line-height: 1.36;
-  padding-left: 2.8125rem;
+  font-family: Nosifer;
+  font-size: clamp(1.875rem, 1.172rem + 2.5vw, 2.5rem);
+  line-height: 0.43;
+  letter-spacing: 0.01em;
+  color: #000;
 }
-.header__logo:before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  width: 2.5rem;
-  height: 2.25rem;
-  background: url(../img/header/headerLogo.svg);
-}
-@media (max-width: 61.9375rem) {
+@media (max-width: 46.875rem) {
   .header__menu {
-    position: absolute;
-    left: 0;
-    padding-left: 0.9375rem;
+    position: fixed;
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
+    right: 0;
     top: 0;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-    -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-            transform: translateY(-100%);
-    background-color: #192033;
-    padding-top: 5rem;
-    padding-bottom: 2.1875rem;
-    width: 100%;
+    width: 60%;
+    height: 100%;
+    background-color: rgb(177, 155, 155);
+    z-index: 10;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
   }
   .header__menu.active {
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-    -webkit-transform: translateY(0%);
-        -ms-transform: translateY(0%);
-            transform: translateY(0%);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 .header__menu nav {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-column-gap: 1.59375rem;
-     -moz-column-gap: 1.59375rem;
-          column-gap: 1.59375rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 2.4375rem;
+     -moz-column-gap: 2.4375rem;
+          column-gap: 2.4375rem;
 }
-@media (max-width: 61.9375rem) {
+@media (max-width: 46.875rem) {
   .header__menu nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    row-gap: 1.5rem;
+    padding: 2.5rem 0.625rem;
+    row-gap: 1.25rem;
   }
 }
 .header__link {
-  font-weight: 700;
-  font-size: 0.8125rem;
-  color: grey;
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s;
-}
-.header__link:hover {
-  color: rgb(187, 172, 172);
-}
-.header__burger {
+  font-family: Poppins;
+  font-size: 0.875rem;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #313131;
   position: relative;
-  z-index: 100;
-  width: 21px;
-  height: 19px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  overflow: hidden;
 }
-@media (min-width: 61.9375rem) {
-  .header__burger {
+.header__link.active:after {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  border-radius: 3px;
+  width: 80%;
+  height: 2px;
+  background: #313131;
+}
+@media (max-width: 46.875rem) {
+  .header__link.active:after {
+    width: 62%;
+  }
+}
+.header__button {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  overflow: hidden;
+  z-index: 100;
+}
+@media (min-width: 46.875rem) {
+  .header__button {
     display: none;
   }
 }
-.header__burger.active div:nth-child(1) {
-  top: 50%;
+.header__button div {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  border-radius: 50px;
+  position: absolute;
+}
+.header__button div:nth-child(1) {
+  top: 0;
+}
+.header__button div:nth-child(2) {
+  top: 10px;
+}
+.header__button div:nth-child(3) {
+  top: 20px;
+}
+.header .header__button.active div:nth-child(1) {
+  top: 10px;
   -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
 }
-.header__burger.active div:nth-child(2) {
-  -webkit-transform: translateX(25px);
-      -ms-transform: translateX(25px);
-          transform: translateX(25px);
+.header .header__button.active div:nth-child(2) {
+  opacity: 0;
 }
-.header__burger.active div:nth-child(3) {
-  top: 50%;
+.header .header__button.active div:nth-child(3) {
+  top: 10px;
   -webkit-transform: rotate(-45deg);
       -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
-.header__burger div {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+
+.page-home {
+  position: relative;
+  min-height: 100vh;
+}
+@media (max-width: 45.625rem) {
+  .page-home {
+    min-height: 100%;
+    padding-bottom: 12.5rem;
+  }
+}
+.page-home__bg {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -3;
+}
+.page-home__bg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.page-home__container {
+  position: relative;
+  max-width: 81.875rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 6.25rem;
+     -moz-column-gap: 6.25rem;
+          column-gap: 6.25rem;
+}
+@media (max-width: 70.3125rem) {
+  .page-home__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.page-home__text {
+  padding-top: clamp(3.125rem, -3.625rem + 24vw, 14.375rem);
+  max-width: 34.75rem;
+}
+.page-home__title {
+  font-family: Varela;
+  font-size: clamp(2.5rem, 0.875rem + 5.59vw, 5.313rem);
+  line-height: 1.12;
+  letter-spacing: 0.04em;
+  color: #fff;
+  margin-bottom: 1.5625rem;
+}
+@media (max-width: 70.3125rem) {
+  .page-home__title {
+    text-align: center;
+  }
+}
+.page-home__paragraph {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: clamp(0.875rem, 0.803rem + 0.25vw, 1rem);
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #fafafa;
+  margin-bottom: 2.5rem;
+  opacity: 0.7;
+}
+@media (max-width: 70.3125rem) {
+  .page-home__paragraph {
+    text-align: center;
+  }
+}
+.page-home__decor {
+  z-index: -2;
+  right: 0;
+  height: 100vh;
+  margin-right: 13.125rem;
+}
+@media (max-width: 70.3125rem) {
+  .page-home__decor {
+    display: none;
+  }
+}
+.page-home__decor img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transform: translateY(-10.5rem) rotate(20deg);
+      -ms-transform: translateY(-10.5rem) rotate(20deg);
+          transform: translateY(-10.5rem) rotate(20deg);
+}
+
+.input-box {
+  max-width: 25.375rem;
   width: 100%;
   background-color: #fff;
-  height: 3px;
-  border-radius: 50px;
+  position: relative;
 }
-.header__burger div:nth-child(1) {
-  top: 0;
+@media (max-width: 70.3125rem) {
+  .input-box {
+    margin: 0 auto;
+  }
 }
-.header__burger div:nth-child(3) {
-  bottom: 0;
+.input-box form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 0.9375rem;
+     -moz-column-gap: 0.9375rem;
+          column-gap: 0.9375rem;
+  padding: 0.75rem 1.3125rem 0.6875rem 1.3125rem;
+}
+.input-box button:nth-child(1) {
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: 0.6875rem;
+  line-height: 1;
+  letter-spacing: 0.11em;
+  color: #fafafa;
+  background: linear-gradient(140deg, #313131 0%, #000 100%);
+  padding: 0.625rem 1.1225rem;
+}
+.input-box input {
+  border: none;
+  outline: none;
+  max-width: 15rem;
+  width: 100%;
+}
+.input-box input::-webkit-input-placeholder {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 0.84375rem;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #313131;
+  opacity: 0.7;
+}
+.input-box input::-moz-placeholder {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 0.84375rem;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #313131;
+  opacity: 0.7;
+}
+.input-box input:-ms-input-placeholder {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 0.84375rem;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #313131;
+  opacity: 0.7;
+}
+.input-box input::-ms-input-placeholder {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 0.84375rem;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #313131;
+  opacity: 0.7;
+}
+.input-box input::placeholder {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 0.84375rem;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #313131;
+  opacity: 0.7;
+}
+.input-box button img {
+  -webkit-transform: translateY(4px);
+      -ms-transform: translateY(4px);
+          transform: translateY(4px);
+}
+
+.page-new-anime {
+  background-color: #ffffff;
+  margin-bottom: 5rem;
+  position: relative;
+  z-index: 1;
+}
+.page-new-anime__container {
+  padding-top: clamp(1.25rem, -3.036rem + 17.14vw, 5rem);
+  max-width: 81.25rem;
+}
+.page-new-anime__title {
+  margin-bottom: 1.75rem;
+}
+.page-new-anime__content {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(12.5rem, 39.75rem));
+}
+@media (max-width: 61.9375rem) {
+  .page-new-anime__content {
+    grid-template-columns: repeat(1, minmax(18.75rem, 52.25rem));
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.page-new-anime__item {
+  width: 100%;
+  height: 100%;
+}
+.page-new-anime__item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.page-new-anime__text-main {
+  padding: 4.5rem 5.125rem 4.5625rem 5.125rem;
+}
+.page-new-anime__history {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: clamp(0.688rem, 0.259rem + 1.71vw, 1.063rem);
+  color: #6e6e6e;
+  margin-bottom: 0.71375rem;
+}
+.page-new-anime__history span {
+  color: #4b4b4b;
+  margin-right: 1.16rem;
+}
+.page-new-anime__title-cards {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: clamp(1.063rem, 0.491rem + 2.29vw, 1.563rem);
+  text-transform: capitalize;
+  color: #313131;
+  margin-bottom: 0.75rem;
+}
+.page-new-anime__paragraph {
+  margin-bottom: 2.0625rem;
+}
+@media (min-width: 61.9375rem) {
+  .page-new-anime__paragraph--padding {
+    padding-left: 4.4375rem;
+  }
+}
+.page-new-anime__text-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+  font-family: Poppins;
+  font-size: clamp(0.75rem, 0.393rem + 1.43vw, 1.063rem);
+}
+.page-new-anime__text-footer p {
+  font-weight: 500;
+  color: #6e6e6e;
+}
+.page-new-anime__text-footer a {
+  font-weight: 700;
+  color: #313131;
+  position: relative;
+}
+.page-new-anime__text-footer a img {
+  width: 28.5px;
+  height: 28.5px;
+  position: relative;
+  bottom: 7px;
+}
+
+@media (max-width: 991px) {
+  .page-new-anime__content > :nth-child(odd):not(:nth-child(1)) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+.page-trend__container {
+  max-width: 81.25rem;
+  margin: 0 auto;
+}
+.page-trend__title {
+  margin-bottom: 1.75rem;
+}
+
+.page-trend__container {
+  max-width: 81.25rem;
+  overflow: hidden;
+}
+.page-trend__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.page-trend__item {
+  max-width: 20.5625rem;
+  width: 100%;
+}
+.page-trend__image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin-bottom: 1.125rem;
+}
+.page-trend__image img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 329/254;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+.page-trend__image img:hover {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.page-trend__genre {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: clamp(0.163rem, 0.407rem + 0.55vw, 0.75rem);
+  color: #6e6e6e;
+  margin-bottom: 0.1875rem;
+}
+.page-trend__genre span {
+  color: #4b4b4b;
+  margin-right: 0.8125rem;
+}
+.page-trend__title-item {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: clamp(0.375rem, 0.667rem + 0.74vw, 1.125rem);
+  color: #313131;
+  margin-bottom: 0.5625rem;
+}
+.page-trend__paragraph {
+  font-size: clamp(0.215rem, 0.417rem + 0.74vw, 0.875rem) !important;
+  margin-bottom: 1rem;
+}
+.page-trend__text-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 0.625rem;
+     -moz-column-gap: 0.625rem;
+          column-gap: 0.625rem;
+  font-family: Poppins;
+  font-size: clamp(0.263rem, 0.407rem + 0.55vw, 0.75rem);
+}
+.page-trend__text-footer p {
+  font-weight: 500;
+  color: #6e6e6e;
+}
+.page-trend__text-footer a {
+  font-weight: 700;
+  color: #313131;
+}
+.page-trend__text-footer img {
+  position: relative;
+  bottom: 10px;
+}
+.page-trend__arrow-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+}
+.page-trend__arrow-slider__prev img {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.page-short__container {
+  max-width: 81.25rem;
+  padding-top: 3.5625rem;
+  padding-bottom: 1.4375rem;
+  overflow: hidden;
+}
+.page-short__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 1.6875rem;
+}
+.page-short__items {
+  border: 1px solid #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 72.5rem;
+  overflow: hidden;
+}
+.page-short__item {
+  border: 1px solid #b8a6a6;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  min-width: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1.25rem;
+  max-width: 21.875rem;
+}
+@media (max-width: 28.125rem) {
+  .page-short__item {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.page-short__img {
+  max-width: 9rem;
+  width: 100%;
+  height: 100%;
+}
+.page-short__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 144/100;
+}
+.page-short__text {
+  max-width: 11rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: clamp(0.75rem, 0.036rem + 2.29vw, 1.75rem);
+}
+@media (max-width: 28.125rem) {
+  .page-short__text {
+    text-align: center;
+  }
+}
+.page-short__title-item {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: clamp(0.875rem, 0.741rem + 0.43vw, 1.063rem);
+  line-height: 1.42;
+  color: #020202;
+}
+.page-short__paragraph {
+  font-family: Poppins;
+  font-size: clamp(0.563rem, 0.429rem + 0.43vw, 0.75rem);
+  line-height: 1.67;
+  letter-spacing: 0.03em;
+  color: #020202;
+  opacity: 0.6;
+}
+
+.paragraph {
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: clamp(0.75rem, 0.25rem + 2vw, 1.188rem);
+  line-height: 150%;
+  color: #6e6e6e;
+}
+
+.title {
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: clamp(1.25rem, 1.159rem + 0.45vw, 1.5rem);
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #313131;
 }
